...
class _RideHistoryView extends StatelessWidget {
  const _RideHistoryView();

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(title: const Text('Your rides')),
      body: BlocBuilder<HistoryCubit, HistoryState>(
        builder: (context, state) {
          return switch (state.status) {
            HistoryStatus.initial ||
            HistoryStatus.loading => const Center(
              child: CircularProgressIndicator(),
...
